--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": ">=8.0",
         "ext-openswoole": "*",
         "illuminate/view": "^11.23",
-        "illuminate/container": "^11.23"
+        "illuminate/container": "^11.23",
+        "firebase/php-jwt": "^6.10"
     },
     "repositories": [
         {
