--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "highlight.js": "^11.10.0",
+    "markdown-it": "^14.1.0",
     "vite": "^5.4.10"
   },
   "devDependencies": {
