--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "psr-4": {
             "Oktaax\\": "src/",
             "Oktaax\\Http\\Middleware\\":"src/Http/Middlewares/"
-        }
+        },
+        "files":[
+            "src/Utils/Functions.php"
+        ]
     },
     "authors": [
         {
