--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "autoload": {
         "psr-4": {
             "Oktaax\\": "src/",
-            "Oktaax\\Http\\Middleware\\":"src/Http/Middlewares/"
+            "Oktaax\\Http\\Middleware\\":"src/Http/Middlewares/",
+            "Appx\\":"app/"
         },
         "files":[
             "src/Utils/Functions.php"
